# risk-reg-radar

./: CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  domain_mapper.py  main.py  scheduler.py  severity_mapper.py
backend/app/ingestion/: cisa_advisories.py  cisa_kev.py  custom_rss.py  ncsc.py  research_feeds.py
backend/app/models/: enums.py
backend/app/routes/: cards.py  clusters.py  ingestion.py  pipeline.py  profile.py  signals.py
backend/app/services/: card_generator.py  clustering.py
backend/data/: regulation_chunks.json
backend/scripts/: backfill_kev_dates.py  backfill_severity.py  index_regulations.py  reset_cards.py
backend/tests/: test_scoring.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: BlockedTechForm.tsx  CardModal.tsx  CustomSourcesForm.tsx  Dashboard.tsx  ProvocationCard.tsx  SwimLanes.tsx  TeamFilter.tsx  TechProfileForm.tsx
frontend/src/lib/: api.ts
supabase/migrations/: 002_signal_clusters.sql  003_provocation_cards.sql  004_org_profile.sql  006_team_tags.sql  009_blocked_technologies.sql  010_toggle_source_fn.sql  011_cluster_retry_count.sql  012_pipeline_runs.sql  013_signal_stats_fn.sql
