[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "regulatory-radar-backend"
version = "0.1.0"
description = "Signal ingestion and API backend for the Regulatory Radar agent"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Async HTTP — used for all outbound feed/API calls
    "httpx>=0.27.0",
    # RSS/Atom feed parsing (CISA advisories, NCSC alerts)
    "feedparser>=6.0.11",
    # Scheduling periodic ingestion runs
    "apscheduler>=3.10.4",
    # Supabase client wraps the Postgres REST + realtime API.
    # Any Postgres-compatible host can be used — see README for alternatives.
    "supabase>=2.4.0",
    # Config via environment variables
    "pydantic-settings>=2.2.0",
    # Anthropic SDK — signal clustering and provocation card generation
    "anthropic>=0.40.0",
    # Uses the OS native trust store (macOS Keychain, Windows cert store) so
    # corporate proxy CAs and system-installed certs are trusted automatically
    "truststore>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # for TestClient
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
